--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongodb": "^4.13.0",
-        "pg": "^8.8.0"
+        "pg": "^8.8.0",
+        "pg-format": "^1.0.4"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^3.4.0",
         "@types/express": "^4.17.14",
         "@types/node": "^18.11.5",
         "@types/pg": "^8.6.6",
+        "@types/pg-format": "^1.0.2",
         "@typescript-eslint/eslint-plugin": "^5.41.0",
         "@typescript-eslint/parser": "^5.41.0",
         "concurrently": "^7.5.0",
